--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^5.11.3",
-    "shortid": "^2.2.16",
+    "nanoid": "^3.1.20",
     "valid-url": "^1.0.9"
   },
   "devDependencies": {
