Add prod.env to start script

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "env-cmd -f ./config/dev.env node src/index.js -e js,hbs"
+    "start": "env-cmd -f ./config/prod.env node src/index.js",
+    "dev": "env-cmd -f ./config/dev.env node src/index.js"
   },
   "repository": {
     "type": "git",
@@ -18,12 +18,11 @@
   },
   "homepage": "https://github.com/parthnaik/url-shortener#readme",
   "dependencies": {
+    "env-cmd": "^10.1.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.3",
     "nanoid": "^3.1.20",
     "valid-url": "^1.0.9"
   },
-  "devDependencies": {
-    "env-cmd": "^10.1.0"
-  }
+  "devDependencies": {}
 }
